discussion/kv_engine/144615/144615_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43815: Avoid trying to use PassiveDM of dead vbucket

VBucket::getPassiveDM() `Expects` that the vb state is replica or
pending, so VBucket code should not intentionally call it when the
vbucket is dead.

Change-Id: I5a4cb809f5043c8b42c6a4b749e19f13f21d4e3f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-01-28 13:18:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-28 13:44:00.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6789/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vbucket.cc:1257:5: error: cannot jump from switch statement to this case label [clang-diagnostic-error]
    case vbucket_state_dead:
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vbucket.cc:1242:15: note: jump bypasses variable initialization
        auto& pdm = getPassiveDM();
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vbucket.cc:1257:29: error: label at end of compound statement: expected statement [clang-diagnostic-error]
    case vbucket_state_dead:
                            ^
                             ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6789/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vbucket.cc:1257:5:
error: cannot jump from switch statement to this case label [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6789/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33226/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\vbucket.cc(1259): error C2059: syntax error: "}" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33226/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28586/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:1257:29:
error: label at end of compound statement: expected statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28586/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7410/ : FAILURE

Compile error at [2021-01-28T13:22:00.201Z] ../kv_engine/engines/ep/src/vbucket.cc:1257:29:
error: label at end of compound statement: expected statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7410/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8324/ : FAILURE

Compile error at [2021-01-28T13:33:29.216Z] ../kv_engine/engines/ep/src/vbucket.cc:1257:10:
error: jump to case label [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8324/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8709/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8452/ : FAILURE

Compile error at [2021-01-28T13:32:42.995Z] ../kv_engine/engines/ep/src/vbucket.cc:1257:10:
error: jump to case label [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8452/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16258/ : FAILURE

Compile error at [2021-01-28T13:33:37.039Z] ../kv_engine/engines/ep/src/vbucket.cc:1257:29:
error: label at end of compound statement: expected statement
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16258/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5325/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
